<resources>
    <string name="app_name">GB-2-Notes2</string>
    <string name="app_title">Заметки</string>
    <string name="action_sort">Сортировать</string>
    <string name="action_new">Создать новую заметку</string>
    <string name="action_settings">Настройки</string>
    <string name="action_sort_title">По заголовкам</string>
    <string name="action_sort_date">По датам</string>
    <string name="action_account">Аккаунт</string>
    <string name="action_theme">Темы</string>
    <string name="action_backup">Резервная копия</string>
    <string name="action_favorite">Избранное</string>
    <string name="drawer_header_title">Настройки</string>
    <string name="drawer_header_text">какой-то текст</string>
    <string name="navigation_drawer_open">Открыть боковушку</string>
    <string name="navigation_drawer_close">Закрыть боковушку</string>
    <string name="drawer_header_username">Остап Ибрагимович Бендер</string>
    <string name="photo">Фото</string>
    <string name="action_open">Открыть</string>
    <string name="action_update">Обновить</string>
    <string name="action_delete">Удалить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>