<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="50"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/action_favorite"/>
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_baseline_auto_awesome_24"
        android:title="@string/action_theme" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/action_account" />
    <item
        android:id="@+id/action_backup"
        android:icon="@android:drawable/stat_sys_download"
        android:orderInCategory="100"
        android:title="@string/action_backup" />
</menu>