<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingTop="@dimen/padding_top" >

    <ImageView
        android:id="@+id/drawer_header_image"
        android:layout_width="@dimen/drawer_header_image_size"
        android:layout_height="@dimen/drawer_header_image_size"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/photo" />

    <TextView
        android:id="@+id/drawer_header_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/drawer_header_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/drawer_header_image"
        android:gravity="center"
        android:text="@string/drawer_header_username"
        android:textSize="@dimen/drawer_header_username_size"/>

    <TextView
        android:id="@+id/drawer_header_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/drawer_header_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/drawer_header_image"
        app:layout_constraintBottom_toBottomOf="@+id/drawer_header_image"
        android:gravity="center"
        android:text="@string/drawer_header_text"
        android:textSize="@dimen/drawer_header_text_size"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/drawer_header_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="@string/drawer_header_title"
        android:textSize="@dimen/drawer_header_title_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>